--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend-tech-test",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@8.6.5",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,14 +13,14 @@
     "test:watch": "jest --watch src"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.4",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "eslint-config-next": "13.2.4",
-    "framer-motion": "^10.9.1",
+    "framer-motion": "^10.12.17",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -27,20 +28,20 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.0",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@types/jest": "^29.5.2",
+    "@types/testing-library__jest-dom": "^5.14.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "eslint": "8.36.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "json-server": "^0.17.3",
-    "prettier": "^2.8.7",
-    "ts-jest": "^29.0.5",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
     "typescript": "4.9.5"
   }
 }
